[metadata]
name = simsig-wtt
version = 0.1.0
author = Jack Deeth
description = Create SimSig timetables from WTT timing points
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.7
#install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    simsig-wtt=app:main

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    hypothesis
    pylint
    black

[tool:pytest]
xfail_strict = true
addopts =
    --cov=src
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress
